Install eslint in backend, Run prettier & small bug fix related to data
